Fixed spacing

--- a/src/components/Tag.css
+++ b/src/components/Tag.css
@@ -11,5 +11,5 @@
     font-family: object_sans_regular;
     border-radius: 2em;
     border-width: 0.1em;
-    padding: 0.5em 0.9em 0.4em 0.9em;
+    padding: 0.8em 0.9em 0.6em 0.9em;
 }
